{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 17,
  "lineage": "15485ec6-0a67-b279-7a39-4218ccc4a433",
  "resources": [
    {
      "module": "module.app_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "INSTANCE_NEW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2d06d50ce30b442",
            "arn": "arn:aws:ec2:us-west-2:711454914059:instance/i-0207b1d59c0922c27",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0207b1d59c0922c27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-aws-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07460f3aca1a6d9f3",
            "private_dns": "ip-10-0-1-138.us-west-2.compute.internal",
            "private_ip": "10.0.1.138",
            "public_ip": "34.215.173.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053e486e0c17ab11a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7c72ec4a56b1a39",
            "tags": {
              "type": "Kittens Store"
            },
            "tags_all": {
              "type": "Kittens Store"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02648eaa88a2ca2eb"
            ]
          },
          "dependencies": [
            "module.app_instance.aws_key_pair.AWS_KEY",
            "module.app_instance.data.aws_ami.AWS_AMI_RES",
            "module.app_instance.data.template_file.USER_DATA",
            "module.security.aws_security_group.SECURITY_GROUP_PORTS",
            "module.vpc.aws_subnet.SUBNET"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SECURITY_GROUP_PORTS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:security-group/sg-02648eaa88a2ca2eb",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02648eaa88a2ca2eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "95.47.56.240/32"
                ],
                "description": "HTTP from VPC",
                "from_port": 1234,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1234
              },
              {
                "cidr_blocks": [
                  "95.47.56.240/32"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls20210915104306591900000001",
            "name_prefix": "allow_tls",
            "owner_id": "711454914059",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-036c3b691f006137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.data.http.myip",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:internet-gateway/igw-0746f63607ee0de7d",
            "id": "igw-0746f63607ee0de7d",
            "owner_id": "711454914059",
            "tags": {
              "Name": "AWS GW"
            },
            "tags_all": {
              "Name": "AWS GW"
            },
            "vpc_id": "vpc-036c3b691f006137f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ROUTING_TABLE",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:route-table/rtb-0abd1c86f903becb5",
            "id": "rtb-0abd1c86f903becb5",
            "owner_id": "711454914059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0746f63607ee0de7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RoutingTable-public"
            },
            "tags_all": {
              "Name": "RoutingTable-public"
            },
            "vpc_id": "vpc-036c3b691f006137f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.GW",
            "module.vpc.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ROUTE_TABLE",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d46962d022dace25",
            "route_table_id": "rtb-0abd1c86f903becb5",
            "subnet_id": "subnet-0a7c72ec4a56b1a39"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.zones",
            "module.vpc.aws_internet_gateway.GW",
            "module.vpc.aws_route_table.ROUTING_TABLE",
            "module.vpc.aws_subnet.SUBNET",
            "module.vpc.aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e25cbe3be93885",
            "route_table_id": "rtb-0abd1c86f903becb5",
            "subnet_id": "subnet-0c566dfee0c2a57b0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.GW",
            "module.vpc.aws_route_table.ROUTING_TABLE",
            "module.vpc.aws_subnet.SUBNET",
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SUBNET",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:subnet/subnet-0a7c72ec4a56b1a39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a7c72ec4a56b1a39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711454914059",
            "tags": {
              "Name": "Subnet-public-1"
            },
            "tags_all": {
              "Name": "Subnet-public-1"
            },
            "vpc_id": "vpc-036c3b691f006137f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:subnet/subnet-0c566dfee0c2a57b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c566dfee0c2a57b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711454914059",
            "tags": {
              "Name": "Subnet-public-2"
            },
            "tags_all": {
              "Name": "Subnet-public-2"
            },
            "vpc_id": "vpc-036c3b691f006137f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.VPC",
            "module.vpc.data.aws_availability_zones.zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:711454914059:vpc/vpc-036c3b691f006137f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04dfecb982f9661c1",
            "default_route_table_id": "rtb-0ec4ba99b1563979d",
            "default_security_group_id": "sg-0fba95902197f2dc9",
            "dhcp_options_id": "dopt-7fd1ed07",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-036c3b691f006137f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ec4ba99b1563979d",
            "owner_id": "711454914059",
            "tags": {
              "Name": "Kittens Store VPC"
            },
            "tags_all": {
              "Name": "Kittens Store VPC"
            }
          }
        }
      ]
    }
  ]
}